2004-04-12  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New release

	* src/Makefile.win: Update Makefile.win to umfpack removal.

2004-04-05  Douglas Bates  <bates@bates2_home>

	* src/triplet_to_col.c: Create triplet_to_col as a native
	function, not the version from umfpack.  There were problems with
	the configuration of UMFPACK for 64-bit processors and there was
	only one umfpack routine being used so I moved it here.

2004-04-04  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_variances): New function.

2004-03-28  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_fitted): Added function.

2004-03-27  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_transfer_dimnames): Add new function to
	store the dimnames in the XtX and bVar slots
	(ssclme_update_mm): Change the dimensions of the bVar slot
	components and the returned value from ssclme_ranef.

2004-03-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/{pdMat.R,pdIdent.R,pdLogChol.R,pdMatrixLog.R,pdNatural.R},
	  src/{pdMat.c,pdIdent.c,pdLogChol.c,pdNatural.c},
	  tests/{pdCompSymm.R,pdDiag.R,pdIdent.R,pdLogChol.R,pdNatural.R},
	  man/{pdMat-class.Rd,pdmatrix-class.Rd,corrmatrix-class.Rd,
	  pdDiag-class.Rd,pdIdent-class.Rd,pdNatural-class.Rd,
	  pdLogChol-class.Rd,coefGets.Rd,pdCompSymm-class.Rd,
	  pdfactor-class.Rd,pdFactor.Rd,pdMatrix.Rd,
	  pdBlocked-class.Rd},AllClass.R,AllGeneric.R:
	Moved the pdMat classes from the lme4 package.

2004-03-02  Douglas Bates  <bates@stat.wisc.edu>

	* man/ssclme-class.Rd: Update definition and documentation of the
	ssclme class to include the DIsqrt slot.

	* src/ssclme.c (ssclme_deviance): Modify order of computation
	(much faster using dsyrk, a level 3 BLAS routine).

	* src/Makefile (SUBLIBS): Change definition (K. Hornik)

2004-02-28  Douglas Bates  <bates@stat.wisc.edu>

	* tests/ssclme.R: Modify the test to account for the permutation
	of the levels of the grouping factors.
