@@ -1,6 +1,8 @@
 \name{tripletMatrix-class}
 \docType{class}
 \alias{tripletMatrix-class}
+\alias{coerce,tripletMatrix,geMatrix-method}
+\alias{coerce,tripletMatrix,cscMatrix-method}
 \alias{image,tripletMatrix-method}
 \alias{t,tripletMatrix-method}
 \title{Class "tripletMatrix" sparse matrices in triplet form}
@@ -25,8 +27,12 @@ Objects can be created by calls of the form \code{new("tripletMatrix", ...)}.
 }
 \section{Methods}{
   \describe{
-    \item{coerce}{\code{signature(from = "cscMatrix", to = "tripletMatrix")}: ... }
-    \item{coerce}{\code{signature(from = "tripletMatrix", to = "cscMatrix")}: ... }
+    \item{coerce}{\code{signature(from = "tripletMatrix", to = "cscMatrix")}}
+    \item{coerce}{\code{signature(from = "tripletMatrix", to = "geMatrix")}}
+    \item{image}{\code{signature(x = "tripletMatrix")}: plots an image of
+      \code{x} using the \code{\link[lattice]{levelplot}} function}
+    \item{t}{\code{signature(x = "tripletMatrix")}: returns the transpose of
+      \code{x}}
   }
 }
 %\references{}
