@@ -53,7 +53,6 @@ $(SUBLIBS):
 	@for d in $(SUBDIRS); do \
 	  (cd $${d} && $(MAKE) -f Makefile.win lib) || exit 1; \
 	done
-	ranlib $@
 
 clean:
 	@-rm -rf .libs _libs
