@@ -7,6 +7,7 @@
 #include <R_ext/Lapack.h>
 #include <R_ext/Constants.h>
 
+SEXP ctab_permute(SEXP ctab);
 SEXP ssclme_create(SEXP grpfac, SEXP ncv, SEXP threshhold);
 SEXP ssclme_update_mm(SEXP x, SEXP facs, SEXP mmats);
 SEXP ssclme_initial(SEXP x);
@@ -19,7 +20,5 @@ SEXP ssclme_sigma(SEXP x, SEXP REML);
 SEXP ssclme_coef(SEXP x);
 SEXP ssclme_coefGets(SEXP x, SEXP coef);
 SEXP ssclme_EMsteps(SEXP x, SEXP nsteps, SEXP REMLp, SEXP verb);
-SEXP ssclme_asSscMatrix(SEXP x);
-SEXP ssclme_asTscMatrix(SEXP x);
 
 #endif
